--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -12,26 +13,61 @@
             font-size: 18px;
             padding: 20px;
         }
-        .message {
-            margin-top: 20px;
-        }
         .loading {
+            font-weight: bold;
             color: yellow;
+            animation: blink 1s infinite;
+        }
+        @keyframes blink {
+            0% { opacity: 1; }
+            50% { opacity: 0; }
+            100% { opacity: 1; }
         }
     </style>
 </head>
 <body>
+
     <h1>System Recovery</h1>
     <p>Welcome to the system recovery page...</p>
     <p class="loading">Loading...</p>
-    <div class="message">
-        <pre>
-> Recovering system files...
-> Please wait...
-> Recovery complete. Proceeding with diagnostics...
-> 
-> Status: All systems operational.
-        </pre>
-    </div>
+
+    <div id="output"></div>
+
+    <script>
+        document.addEventListener("DOMContentLoaded", function() {
+            const text = [
+                "> Recovering system files...",
+                "> Please wait...",
+                "> Recovery complete. Proceeding with diagnostics...",
+                "> Status: All systems operational."
+            ];
+            
+            let index = 0;
+            let output = document.getElementById("output");
+
+            function typeLine() {
+                if (index < text.length) {
+                    let line = document.createElement("p");
+                    output.appendChild(line);
+                    let charIndex = 0;
+
+                    function typeChar() {
+                        if (charIndex < text[index].length) {
+                            line.innerHTML += text[index][charIndex];
+                            charIndex++;
+                            setTimeout(typeChar, 50); // Скорость печати
+                        } else {
+                            index++;
+                            setTimeout(typeLine, 500); // Пауза между строками
+                        }
+                    }
+                    typeChar();
+                }
+            }
+            
+            typeLine();
+        });
+    </script>
+
 </body>
 </html>
