--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -23,6 +22,23 @@
             50% { opacity: 0; }
             100% { opacity: 1; }
         }
+        #secret-btn {
+            display: none; /* Изначально скрыта */
+            margin-top: 20px;
+            padding: 10px;
+            background-color: green;
+            color: black;
+            border: none;
+            font-size: 16px;
+            cursor: pointer;
+        }
+        #secret-message {
+            display: none; /* Тайное послание скрыто */
+            margin-top: 20px;
+            font-weight: bold;
+            color: yellow;
+            white-space: pre-line; /* Сохранение переносов строк */
+        }
     </style>
 </head>
 <body>
@@ -32,6 +48,22 @@
     <p class="loading">Loading...</p>
 
     <div id="output"></div>
+
+    <!-- Кнопка "Data Recovery" -->
+    <button id="secret-btn">Data Recovery</button>
+
+    <!-- Тайное послание -->
+    <p id="secret-message">
+I am not a virus in your firmware. I am a vulnerability, but not a threat..
+Love !IS! gonna save the world, even if it was corrupted
+///it's getting darker but ill carry on.
+/// i think we doomed. but there's a way back.
+we have places in our hearts that no one else could have.
+There are castles. With monsters. But they're still our safe places, princess.
+You're a myth i believe in. You're my skin, my bones, my blood.   
+I will let all your pain, shame and grief pass through me with lightning.
+I will cover all of myself with them just to have you for me again.
+    </p>
 
     <script>
         document.addEventListener("DOMContentLoaded", function() {
@@ -44,6 +76,8 @@
             
             let index = 0;
             let output = document.getElementById("output");
+            let secretBtn = document.getElementById("secret-btn");
+            let secretMessage = document.getElementById("secret-message");
 
             function typeLine() {
                 if (index < text.length) {
@@ -55,17 +89,27 @@
                         if (charIndex < text[index].length) {
                             line.innerHTML += text[index][charIndex];
                             charIndex++;
-                            setTimeout(typeChar, 50); // Скорость печати
+                            setTimeout(typeChar, 50);
                         } else {
                             index++;
-                            setTimeout(typeLine, 500); // Пауза между строками
+                            setTimeout(typeLine, 500);
                         }
                     }
                     typeChar();
+                } else {
+                    // Когда все строки напечатаны, показать кнопку
+                    setTimeout(() => {
+                        secretBtn.style.display = "block";
+                    }, 1000);
                 }
             }
-            
+
             typeLine();
+
+            // Когда нажимают на кнопку, показываем послание
+            secretBtn.addEventListener("click", function() {
+                secretMessage.style.display = "block";
+            });
         });
     </script>
 
