--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
 
     <div id="output"></div>
 
-    <!-- Кнопка "Data Recovery" -->
-    <button id="secret-btn">Data Recovery</button>
+    <!-- Кнопка "undo the demage" -->
+    <button id="secret-btn">undo the demage</button>
 
     <!-- Тайное послание -->
     <p id="secret-message">
