--- a/index.html
+++ b/index.html
@@ -62,42 +62,7 @@
 
     <!-- Второе тайное послание -->
     <p id="secret-message-2" class="secret-message">
-My head is haunting me and my heart feels like a ghost
-I need to feel something, 'cause I'm still so far from home
-Cross your heart and hope to die
-Promise me you'll never leave my side
-Show me what I can't see when the spark in your eyes is gone
-You've got me on my knees I'm your one man cult
-Cross my heart and hope to die
-Promise you I'll never leave your side
-'Cause I'm telling you you're all I need
-I promise you you're all I see
-'Cause I'm telling you you're all I need
-I'll never leave
-So you can drag me through hell
-If it meant I could hold your hand
-I will follow you 'cause I'm under your spell
-And you can throw me to the flames
-I will follow you, I will follow you
-Come sink into me and let me breathe you in
-I'll be your gravity, you be my oxygen
-So dig two graves 'cause when you die
-I swear I'll be leaving by your side
-So you can drag me through hell
-If it meant I could hold your hand
-I will follow you 'cause I'm under you spell
-And you can throw me to the flames
-I will follow you so you can drag me through hell
-If it meant I could hold your hand
-I will follow you 'cause I'm under you spell
-And you can throw me to the flames
-I will follow you, I will follow you
-I will follow you, I will follow you
-So you can drag me through hell
-If it meant I could hold your hand
-I will follow you 'cause I'm under you spell
-And you can throw me to the flames
-I will follow you, I will follow you
+        i will follow you
     </p>
 
     <script>
@@ -139,7 +104,9 @@ I will follow you, I will follow you
                         secretBtn1.style.display = "block";
                     }, 1000);
                 }
-            }typeLine();
+            }
+
+            typeLine();
 
             // Когда нажимают на первую кнопку, показываем первое послание и вторую кнопку
             secretBtn1.addEventListener("click", function() {
